<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>
    <string name="about">Čia bus pateiktas tekstas, kuris apibūdins pagrindinę aplikacijos idėją. Taip pat bus pateikiami autorių kontaktiniai duomenys.</string>
    <string name="contact_us">Contact us!</string>
    <string name="like_us">Like us!</string>
    <string name="dialog_delete_note">Delete this note?</string>
    <string name="dialog_delete_confirm">YES</string>
    <string name="dialog_delete_denny">NO</string>

    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>

    <string name="by_date">By Date</string>
    <string name="by_importance">By Importance</string>
    <string name="by_input_date">By Input Date</string>

    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="set_date">SET DATE</string>
    <string name="importance">Importance</string>
    <string name="description">Description</string>

    <!-- Navigation drawer menu items -->
    <string-array name="menu_items">
        <item>Home</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <!-- Available languages -->
    <string-array name="languages">
        <item>English</item>
        <item>Lietuvių</item>
    </string-array>

    <!-- Importance -->
    <string-array name="importance">
        <item>Important</item>
        <item>Major</item>
        <item>Primary</item>
    </string-array>
</resources>
