<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:todolist="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:title="Sort"
        todolist:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_date"
                android:title="@string/by_date"
                todolist:showAsAction="never"/>
            <item
                android:id="@+id/menu_importance"
                android:title="@string/by_importance"
                todolist:showAsAction="never"/>
            <item
                android:id="@+id/menu_input_date"
                android:title="@string/by_input_date"
                todolist:showAsAction="never"/>
        </menu>
    </item>
</menu>