<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/main_padding"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTitle"
        android:layout_alignParentTop="true"
        android:hint="@string/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="@dimen/text_medium"
        android:id="@+id/textViewDate"
        android:layout_below="@+id/editTextTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
        android:id="@+id/textButtonSetDate"
        android:clickable="true"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/textHighlight2"
        android:layout_below="@+id/editTextTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importance"
        android:textSize="@dimen/text_medium"
        android:id="@+id/imageViewImportance"
        android:layout_below="@+id/textViewDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerImportance"
        android:layout_below="@+id/textButtonSetDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/description"
        android:id="@+id/editTextDescription"
        android:layout_below="@+id/spinnerImportance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shadow"
        android:background="@drawable/ic_shadow"
        android:layout_below="@+id/editTextDescription"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAdd"
        android:background="@drawable/button_add"
        android:layout_below="@+id/editTextDescription"
        android:layout_centerHorizontal="true" />

</RelativeLayout>